adding filter to msms and readme file

--- a/web/templates/data-explorer.html
+++ b/web/templates/data-explorer.html
@@ -80,6 +80,8 @@
       <br>
       <input type="text" name="mgffile" placeholder="MGF file to save to"></input>
       <br>
+      <input type="text" name="inchi" placeholder="Annotation InChI"></input>
+      <br>
       <button type="submit">Save to MGF</button>
     </form>
 </div>
